--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,30 +1,38 @@
-div {
-    border: 1px solid red;
-}
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    /* font-family: Poppins; */
 }
+
+/* div {
+    border: 1px solid red;
+} */
 
 html, body {
-    background-color: #264653;
-    /* height: 100%; */
+    background-color: #264653
 }
 
-/*---- Navbar ----*/
+/*---- Navbar -------------------------------------*/
 
-.container-fluid{
+/* #header-fixed {    
+    position: sticky;
+    top: 0px;
     background-color: #264653;
-}
+    width: 100%;
+} */
 
 .nav-item{
+    display: flex;
+    align-items: center;
     margin-top: 50px;
     padding: 5px;
     font-size: 31px;
     font-weight: 450;
+}
+
+.navbar-toggler{
+    border: 1px solid black;
+    background-color: #2b596b;
 }
 
 #logo {
@@ -48,7 +56,7 @@ html, body {
     color: #c55438;    
 }
 
-/*---- Seção 1 ----*/
+/*---- Seção 1 -----------------------------------*/
 
 #background1{
     background-image: url(../img/background1.png);
@@ -82,7 +90,7 @@ html, body {
     /* font-weight: 500; */
 }
 
-/*---- Seção 2 ----*/
+/*---- Seção 2 -------------------------------------*/
 
 #col-section2{
     padding: 60px;
@@ -111,7 +119,7 @@ html, body {
     align-items: center;
 }
 
-/*---- Seção 3 ----*/
+/*---- Seção 3 ------------------------------------*/
 
 #background2{
     background-image: url(../img/background2.png);
@@ -138,7 +146,7 @@ html, body {
     align-items: center;
 }
 
-/*---- Seção 4 ----*/
+/*---- Seção 4 -------------------------------------*/
 
 #col-section4{
     padding: 60px;
@@ -157,7 +165,7 @@ html, body {
     padding: 20px;
 }
 
-/*---- Cards ----*/
+/*---- Cards --------------------------------------*/
 
 .entreContato{
     text-align: center;
@@ -166,6 +174,13 @@ html, body {
 }
 
 #cards{
+    background-color: #C25033;
+    border: #C25033 solid 1px;
+    border-radius: 65px;
+    height: auto;
+}
+
+#cards3{
     background-color: #C25033;
     border: #C25033 solid 1px;
     border-radius: 65px;
@@ -218,36 +233,23 @@ html, body {
     margin-left: 50px;
 }
 
-/*---- Footer ----*/
+/*---- Footer -------------------------------------*/
 
 #footer{
     display:flex;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
     background-color:#2A9D8F;
     padding:10px;
-    justify-content: space-around;
-    width:100%;
-    margin-bottom: 0;
+    width:auto;
+    bottom: 0px;
 }
 
-.projeto{
+/* #textFooter{
     color:white;
     margin-top: 15px;
-}
-
-#redes {
-    display: flex;
-    margin: auto;
-}
-
-#social{
-    width: 400px;
-}
-
-.icones{
-    width: 100%;
-    padding: 10%;
-}
+} */
 
 
   /* span-style ------------------------------------ */
@@ -270,4 +272,47 @@ html, body {
 
 .cor-branco{
     color: white;
+}
+
+/*---- Responsive --------------------------------*/
+
+@media(max-width:1024px){
+    #logo{
+        width: 30%;
+    }
+    .bloco1{
+        display: none;
+    }
+
+    #bloco2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 10px;
+    }
+
+    #blobo3{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 10px;
+    }
+
+    #cards{
+        display: none;
+    }
+
+    #footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+@media(min-width:1024px){
+    #cards3{
+        display: none;
+    }
+
+
 }
